2002-07-30  Lauris Kaplinski  <lauris@ximian.com>

	* src/Makefile.am (sodipodi_SOURCES): Added macros.h

	* src/sp-text.c (sp_text_write_transform): Do multiline transforming
	the right way

	* src/macros.h: New file for useful macros

2002-07-29  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_tspan_build): Get attributes at right place, read role as well
	(sp_tspan_read_attr): Parse "sodipodi:role" attribute
	(sp_text_append_line): New method

	* src/sp-text.h: Specify role for <tspan> element

2002-07-26  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_string_set_shape): Changed signature, pass layout and currentpoint
	(sp_tspan_set_shape): New method
	(sp_text_build): Use normal order, as shape will be set asynchronously
	(sp_text_read_attr): Request update everywhere
	(sp_text_child_added): Fix bug, now keep old children in list
	(sp_text_set_shape): New method, nothing interesting yet

	* src/text-context.c (sp_text_context_selection_changed): Set active object
	to NULL, if nothing selected

2002-07-24  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-object.c (sp_object_modified): Merge style with parent if needed,
	moved style_modified after signal

	* src/sp-text.c (sp_tspan_modified): Include style flag in cascade
	(sp_text_modified): Ditto
	(sp_string_modified): Re-enable it (although this is probably not correct)

	* src/style.c (sp_style_merge_from_object_parent): Merge writing mode

	* src/sp-item-group.c (sp_group_modified): Include style flag in cascade

	* src/sp-gradient.c (sp_gradient_modified): Include style flag in cascade

2002-07-22  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/style.c (sp_style_new_from_object): Renamed sp_style_new
	(sp_style_read_from_object): Use SP_SCALE30 for opacity, new paint structure
	(sp_style_merge_property): Ditto
	(sp_style_merge_from_object_parent): Renamed sp_style_merge_from_object,
	read only from immediate parent (which should have merged from ancestors itself)